# Graph

./: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
include/Graph/: common.hpp  graph.hpp
src/: CMakeLists.txt  graph.cpp
tests/end_to_end/: CMakeLists.txt  generate.py  run_core.py  run_tests.py
tests/end_to_end/answers/: answer_001.ans  answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_008.ans  answer_009.ans  answer_010.ans
tests/end_to_end/answers_core/: 005.ans
tests/end_to_end/tests_in/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/unit/: CMakeLists.txt  graph_unit_test.cpp
