set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)

add_executable(graph graph.cpp)
target_sources(graph
    PRIVATE
    FILE_SET HEADERS
    BASE_DIRS ${INCLUDE_DIR}
)

include(GNUInstallDirs)

add_library(Graph graph.cpp)
target_include_directories(Graph PUBLIC
    $<BUILD_INTERFACE:${INCLUDE_DIR}>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(TARGETS Graph EXPORT GraphTargets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(DIRECTORY ${INCLUDE_DIR}/Graph DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(EXPORT GraphTargets
    FILE GraphConfig.cmake
    DESTINATION lib/cmake/Graph
)